--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -27,7 +26,7 @@
                     android:layout_weight="4"
                     android:layout_marginStart="18dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginEnd="18dp">
+                    android:layout_marginEnd="7dp">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/etInputQrContent"
@@ -37,6 +36,19 @@
                         android:minLines="1" />
 
                 </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/btnPaste"
+                    android:layout_width="0dp"
+                    android:layout_marginEnd="7dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end|bottom"
+                    android:tooltipText="黏贴"
+                    android:backgroundTint="@color/dynamic_light"
+                    android:visibility="visible"
+                    android:contentDescription="黏贴"
+                    android:src="@drawable/baseline_content_paste_24" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/btnClear"
